[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epusdt"
version = "0.2.3"
description = "Epusdt 商户支付 Python SDK，支持 GMPay、EPay 兼容接入与回调验签"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Yufeifeio" }
]
keywords = ["epusdt", "gmpay", "epay", "payment", "crypto", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/Yufeifeio/epusdt-python-sdk"
Source = "https://github.com/Yufeifeio/epusdt-python-sdk"
Issues = "https://github.com/Yufeifeio/epusdt-python-sdk/issues"
PyPI = "https://pypi.org/project/epusdt/"
Official = "https://github.com/GMWalletApp/epusdt"
Changelog = "https://github.com/Yufeifeio/epusdt-python-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
]
qrcode = [
  "qrcode[pil]>=7.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
epusdt = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
