[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epusdt"
dynamic = ["version"]
description = "Epusdt 商户支付 Python SDK，支持同步/异步客户端、GMPay、EPay 兼容接入与回调验签"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Yufeifeio" }
]
keywords = ["epusdt", "gmpay", "epay", "payment", "crypto", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "httpx>=0.27,<1",
  "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/Yufeifeio/epusdt-python-sdk"
Source = "https://github.com/Yufeifeio/epusdt-python-sdk"
Issues = "https://github.com/Yufeifeio/epusdt-python-sdk/issues"
PyPI = "https://pypi.org/project/epusdt/"
Official = "https://github.com/GMWalletApp/epusdt"
Changelog = "https://github.com/Yufeifeio/epusdt-python-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]
lint = [
  "ruff>=0.6",
  "mypy>=1.8",
  "bandit>=1.7",
  "types-requests>=2.31",
]
build = [
  "build>=1.0",
  "twine>=5.0",
]
qrcode = [
  "qrcode[pil]>=7.4",
]
dev = [
  "build>=1.0",
  "twine>=5.0",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "bandit>=1.7",
  "types-requests>=2.31",
  "qrcode[pil]>=7.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "epusdt._version.__version__" }

[tool.setuptools.package-data]
epusdt = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: 需要真实 EPUSDT 网关环境变量，默认跳过",
]

[tool.mypy]
warn_unused_ignores = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["qrcode.*"]
ignore_missing_imports = true
